plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
}

group 'org.example'
version '1.0-SNAPSHOT'


mainClassName = 'MyApp'
applicationName = 'CatGame'
targetCompatibility = 11

def javafxModules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media' ]
run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', javafxModules.join(',')
        ]
    }
}

repositories {
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    jcenter()
}


javafx {
    version = "12"
    modules = javafxModules
}


dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    compile 'no.tornado:tornadofx:2.0.0-SNAPSHOT'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.61"
    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
}

compileKotlin {
    kotlinOptions.jvmTarget = "11"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "11"
}